Source/JavaScriptCore/dfg/DFGValueRepReductionPhase.cpp
@@ -32,6 +32,7 @@
 #include "DFGInsertionSet.h"
 #include "DFGPhase.h"
 #include "DFGPhiChildren.h"
+#include "JSCJSValueInlines.h"
 
 namespace JSC { namespace DFG {
 
