Source/JavaScriptCore/runtime/AggregateErrorPrototype.cpp
@@ -26,11 +26,17 @@
 #include "config.h"
 #include "AggregateErrorPrototype.h"
 
+#include "AggregateError.h"
 #include "CallFrame.h"
 #include "Error.h"
+#include "IdentifierInlines.h"
+#include "JSCJSValueInlines.h"
 #include "JSCell.h"
+#include "JSCellInlines.h"
+#include "JSGlobalObjectInlines.h"
 #include "JSObject.h"
 #include "ThrowScope.h"
+#include "VMInlines.h"
 #include <wtf/Locker.h>
 
 namespace JSC {
